fix: page transition issue on ios

--- a/src/app/pages/scan/scan.page.scss
+++ b/src/app/pages/scan/scan.page.scss
@@ -1,3 +1,9 @@
+ion-content,
+body {
+    background: none transparent;
+    --background: none transparent;
+}
+
 .guide {
     display: flex;
     height: 100%;
